# tamanegi-error

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml
examples/: basic_struct.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs  location.rs
tests/: compile_pass.rs
